force-app/main/default/objects/Individual__c/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>