force-app/main/default/objects/Individual__c/fields/Is_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Sent</label>
    <type>Checkbox</type>
</CustomField>