force-app/main/default/objects/Individual__c/fields/Nearest_Vaccination_Center__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Vaccination_Center__c</fullName>
    <label>Nearest Vaccination Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>